--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-leap-day
+
+title: WFG's Pages
+description: Some notes about software, hardware and personal interests
+show_downloads: "true"
+
+tagline: Site Tagline
+author:
+  name: William F Godoy
+  email: godoywf@ornl.gov
+  github: williamfgc
