First Project using the Julia Language
Changed about and contents
Added pic and julia contents

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-leap-day
 
-title: WFG's Pages
-description: Some notes about software, hardware and personal interests
+title: "williamfgc's Notes"
+description: Some notes about software, hardware technologies and personal interests
 show_downloads: "true"
 
 tagline: Site Tagline
