--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
 theme: jekyll-theme-leap-day
+plugins:
+- jekyll-sitemap
 
 title: "williamfgc's Notes"
 description: Some notes about software, hardware technologies and personal interests
-show_downloads: "true"
 
-tagline: Site Tagline
-author:
-  name: William F Godoy
-  email: godoywf@ornl.gov
-  github: williamfgc
+show_downloads: true
